force-app/main/default/objects/Car__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Car_Type__c</columns>
    <columns>Contact__c</columns>
    <columns>Mileage__c</columns>
    <columns>Price__c</columns>
    <columns>Picture__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>